--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = citizen_service_platform
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.eslamfares.citizenServicePlatform
+PRODUCT_BUNDLE_IDENTIFIER = com.gt.citizenServicePlatform
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2025 com.eslamfares. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2025 com.gt. All rights reserved.
