--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -93,7 +93,7 @@ BEGIN
             VALUE "FileDescription", "citizen_service_platform" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "citizen_service_platform" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2025 com.eslamfares. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2025 com.gt. All rights reserved." "\0"
             VALUE "OriginalFilename", "citizen_service_platform.exe" "\0"
             VALUE "ProductName", "citizen_service_platform" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
