--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_svg: ^2.2.3
   fluttertoast: ^9.0.0
   get_it: ^9.1.1
+  glassmorphism: ^3.0.0
   go_router: ^17.0.0
   image_picker: ^1.2.1
   internet_connection_checker_plus: ^2.9.1
@@ -88,6 +89,7 @@ flutter:
     - assets/translations/
     - assets/img/
     - assets/icons/
+    - assets/icons/home/
     - assets/svg/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
