--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,8 +88,10 @@ flutter:
   assets:
     - assets/translations/
     - assets/img/
+    - assets/img/services/
     - assets/icons/
     - assets/icons/home/
+    - assets/icons/bottom_nav/
     - assets/svg/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
