--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,13 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cached_network_image: ^3.4.1
+  collection: ^1.19.1
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
   dio: ^5.9.0
   easy_localization: ^3.0.8
   equatable: ^2.0.7
+  file_picker: ^10.3.7
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
