--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   flutter_svg: ^2.2.3
   fluttertoast: ^9.0.0
   get_it: ^9.1.1
-  glassmorphism: ^3.0.0
+  glass: ^2.0.0+2
   go_router: ^17.0.0
   image_picker: ^1.2.1
   internet_connection_checker_plus: ^2.9.1
