--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
   dio: ^5.9.0
+  dropdown_button2: ^2.3.9
   easy_localization: ^3.0.8
   equatable: ^2.0.7
   file_picker: ^10.3.7
