--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   flutter_svg: ^2.2.3
   fluttertoast: ^9.0.0
+  geolocator: ^14.0.1
   get_it: ^9.1.1
   glass: ^2.0.0+2
   go_router: ^17.0.0
