feat: Implement forget password and reset password functionality
- Added `StateBox` class for managing state in BLoC.
- Created `ForgetPasswordCubit` and `ResetPasswordCubit` for handling business logic.
- Developed UI components for forget password and reset password screens.
- Integrated `pin_code_fields` package for OTP input.
- Implemented API calls for sending and verifying OTP.
- Added localization support for user messages.
- Created reusable widgets for form inputs and buttons.
- Enhanced error handling and loading states in the UI.

--- a/mason.yaml
+++ b/mason.yaml
@@ -16,13 +16,23 @@ bricks:
     git:
       url: https://github.com/EslamFares/fares_helper_mason.git
       path: bricks/featureMultiEnumState
+  featureMultiEnumStateSingle:
+    git:
+      url: https://github.com/EslamFares/fares_helper_mason.git
+      path: bricks/featureMultiEnumStateSingle
 
   #*--------- Use ----------------------------
-#!| get(first)                        | make(last)                        |
-# | mason get feature                 | mason make feature                |
-# | mason get featureEnumState        | mason make featureEnumState       |
-# | mason get featureMultiEnumState   | mason make featureMultiEnumState  |
+#!| get(first)                            | make(last)                              |
+# | mason get feature                     | mason make feature                      |
+# | mason get featureEnumState            | mason make featureEnumState             |
+# | mason get featureMultiEnumState       | mason make featureMultiEnumState        |
+# | mason get featureMultiEnumStateSingle | mason make featureMultiEnumStateSingle  |
 
 #*--------- Error Path ----------------------------
 #! error path
 # mason cache clear
+#! delete data in line => mason-lock.json
+
+#*--------- versions of mason used----------------------------
+#  run
+#  mason list
