--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   logger: ^2.6.2
   package_info_plus: ^9.0.0
   path_provider: ^2.1.5
+  pin_code_fields: ^8.0.1
   pretty_dio_logger: ^1.4.0
   rename_app: ^1.6.5
   shared_preferences: ^2.5.3
